--- a/Organizator/appsettings.json
+++ b/Organizator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Organizator-29E9C5AB-D444-4ED5-84FA-EAC09A9B5C0A;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=Organizator.db"
   },
   "Logging": {
     "LogLevel": {
