Edit registration form

--- a/Organizator/appsettings.json
+++ b/Organizator/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=Organizator.db"
+    "DefaultConnection": "Data Source=Organizator.db",
+    "AccountContextConnection": "DataSource=Organizator.db"
   },
   "Logging": {
     "LogLevel": {
